Tested the script but it might be running all the images at once.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Media
+*.jpeg
+*.jpg
+*.png
+meta_data.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -121,3 +127,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+imagenet-vgg-verydeep-19.mat
