--- a/.gitignore
+++ b/.gitignore
@@ -104,9 +104,7 @@ celerybeat-schedule
 # Environments
 .env
 .venv
-env/
 venv/
-ENV/
 env.bak/
 venv.bak/
 
@@ -129,3 +127,4 @@ dmypy.json
 .pyre/
 imagenet-vgg-verydeep-19.mat
 tests.txt
+.DS_Store
